--- a/.github/workflows/npm-publish-packages.yml
+++ b/.github/workflows/npm-publish-packages.yml
@@ -17,7 +17,8 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-
+          
+      - run: npm install
       - run: npm run lib
 
       - name: Publish package to NPM 📦
